Increase default character settings, etc.
Increased character limit to 10000, 20 pinned posts, 10000 bio characters, 20 profile fields, 1000 display name characters, 32 poll options, and 1000 poll option characters.
Increased image size from 8MB to 32MB and video size from 40MB to 320MB. Also 50 search results instead of 20.

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -249,35 +249,35 @@ SMTP_FROM_ADDRESS=notifications@example.com
 # ---------------
  
 # Maximum allowed character count
-MAX_TOOT_CHARS=500
+MAX_TOOT_CHARS=10000
 
 # Maximum number of pinned posts
-MAX_PINNED_TOOTS=5
+MAX_PINNED_TOOTS=20
 
 # Maximum allowed bio characters
-MAX_BIO_CHARS=500
+MAX_BIO_CHARS=10000
 
 # Maximim number of profile fields allowed
-MAX_PROFILE_FIELDS=4
+MAX_PROFILE_FIELDS=20
 
 # Maximum allowed display name characters
-MAX_DISPLAY_NAME_CHARS=30
+MAX_DISPLAY_NAME_CHARS=1000
 
 # Maximum allowed poll options
-MAX_POLL_OPTIONS=5
+MAX_POLL_OPTIONS=32
 
 # Maximum allowed poll option characters
-MAX_POLL_OPTION_CHARS=100
+MAX_POLL_OPTION_CHARS=1000
 
 # Maximum image and video/audio upload sizes
 # Units are in bytes
 # 1048576 bytes equals 1 megabyte
-# MAX_IMAGE_SIZE=8388608
-# MAX_VIDEO_SIZE=41943040
+MAX_IMAGE_SIZE=33554432
+MAX_VIDEO_SIZE=335544320
 
 # Maximum search results to display
 # Only relevant when elasticsearch is installed
-# MAX_SEARCH_RESULTS=20
+# MAX_SEARCH_RESULTS=50
 
 # Maximum custom emoji file sizes
 # If undefined or smaller than MAX_EMOJI_SIZE, the value
